--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,12 @@
 services:
+  airguardian:
+    build: .
+    depends_on:
+      mongodb:
+        condition: service_healthy
+    ports:
+      - 8080:8080
+
   mongodb:
     image: mongo:latest
     environment:
@@ -6,4 +14,8 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
     ports:
       - 27017:27017
+    healthcheck:
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
+      timeout: 5s
+      retries: 10
 
