--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
       - 27017:27017
     healthcheck:
       test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
-      timeout: 5s
-      retries: 10
+      interval: 1s
+      timeout: 1s
+      retries: 3
 
