--- a/airguardian-core/src/main/resources/application-dev.yml
+++ b/airguardian-core/src/main/resources/application-dev.yml
@@ -3,7 +3,13 @@ spring:
     mongodb:
       database: drone
       port: 27017
-      host: airguardian-mongodb-1
+      host: localhost
       password: secret
       username: root
       authentication-database: admin
+  docker:
+    compose:
+      enabled: true
+      file: docker-compose.dev.yml
+nats:
+  url: nats://localhost:4222
