--- a/.github/workflows/git-actions.yml
+++ b/.github/workflows/git-actions.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Start MongoDB container
+        run: |
+          docker run -d --name mongo -p 27017:27017 \
+            -e MONGO_INITDB_ROOT_USERNAME=root \
+            -e MONGO_INITDB_ROOT_PASSWORD=secret \
+            -e MONGO_INITDB_DATABASE=admin \
+            mongo:latest
+
+      - name: Start NATS container
+        run: docker run -d --name nats -p 4222:4222 nats:latest
+
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
