--- a/airguardian-core/src/main/resources/application.yml
+++ b/airguardian-core/src/main/resources/application.yml
@@ -7,5 +7,10 @@ spring:
       password: secret
       username: root
       authentication-database: admin
+  kafka:
+    bootstrap-servers: http://airguardian-kafka-1:9092
+    properties:
+      schema.registry.url: http://airguardian-schema-registry-1:8081
 nats:
   url: airguardian-nats-1
+
