--- a/airguardian-core/src/main/resources/application-test.yml
+++ b/airguardian-core/src/main/resources/application-test.yml
@@ -7,5 +7,9 @@ spring:
       password: secret
       username: root
       authentication-database: admin
+  kafka:
+    bootstrap-servers: localhost:9092
+    properties:
+      schema.registry.url: http://localhost:8081
 nats:
   url: nats://localhost:4222
