Add redis properties

--- a/airguardian-core/src/main/resources/application.yml
+++ b/airguardian-core/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 spring:
   data:
+    redis:
+      ttl:
+        minutes: 15
+      host: localhost
+      key:
+        prefix:
+          drone-key-
     mongodb:
       database: drone
       port: 27017
