--- a/compose.yaml
+++ b/compose.yaml
@@ -29,11 +29,6 @@ services:
     image: nats
     ports:
       - "4222:4222"
-    healthcheck:
-      test: [ "CMD", "nats", "ping" ]
-      interval: 1s
-      timeout: 1s
-      retries: 3
   kafka1:
     image: 'bitnami/kafka:latest'
     ports:
@@ -59,6 +54,11 @@ services:
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://kafka1:29092
+
+  redis-air-guardian:
+    image: redis:alpine3.18
+    ports:
+      - "6379:6379"
 volumes:
   mongo-data:
   kafka-data:
