--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,11 @@ services:
     image: nats
     ports:
       - "4222:4222"
+    healthcheck:
+      test: [ "CMD", "nats", "ping" ]
+      interval: 1s
+      timeout: 1s
+      retries: 3
   kafka1:
     image: 'bitnami/kafka:latest'
     ports:
