Fix code style and minor issue`s #2

--- a/airguardian-core/src/main/resources/application.yml
+++ b/airguardian-core/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     redis:
       ttl:
         minutes: 15
-      host: localhost
+      host: airguardian-redis-air-guardian-1
       key:
         prefix:
           drone-key-
