--- a/airguardian-core/src/main/resources/application-test.yml
+++ b/airguardian-core/src/main/resources/application-test.yml
@@ -7,5 +7,12 @@ spring:
       password: secret
       username: root
       authentication-database: admin
+    redis:
+      host: localhost
+      ttl:
+        minutes: 15
+      key:
+        prefix:
+          drone-key-
 nats:
   url: nats://localhost:4222
